--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -44,8 +44,8 @@
                       <div class="card-icon">
                           <i class="material-icons">info_outline</i>
                       </div>
-                      <p class="card-category">Sentiment</p>
-                      <h3 class="card-title">75%</h3>
+                      <p class="card-category">Unique Source</p>
+                      <h3 class="card-title">{{ uniqueSource.length }}</h3>
                   </div>
                   <div class="card-footer">
                       <div class="stats">
