--- a/src/assets/scss/core/_responsive.scss
+++ b/src/assets/scss/core/_responsive.scss
@@ -519,7 +519,8 @@
         display: block;
         top: 0;
         height: 100vh;
-        width: 260px;
+        // width: 260px;
+        width: 95%;
         right: 0;
         left: auto;
         z-index: 1032;
