--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -13,10 +13,10 @@
                           <!-- <small>K</small> -->
                       </h3>
                   </div>
-                  <div class="card-footer">
-                      <div class="stats">
+                  <div class="card-footer" style="border: none;">
+                      <!-- <div class="stats">
                         <i class="material-icons">date_range</i> Last 24 Hours
-                    </div>
+                    </div> -->
                   </div>
               </div>
           </div>
@@ -26,13 +26,13 @@
                       <div class="card-icon">
                           <i class="material-icons">person</i>
                       </div>
-                      <p class="card-category">Unique Authors</p>
-                      <h3 class="card-title">{{uniqueAuthors}}</h3>
+                      <p class="card-category">Total Negatives</p>
+                      <h3 class="card-title">{{this.getNegativeReviewCount()}}</h3>
                   </div>
-                  <div class="card-footer">
-                      <div class="stats">
+                  <div class="card-footer" style="border: none;">
+                      <!-- <div class="stats">
                           <i class="material-icons">date_range</i> Last 24 Hours
-                      </div>
+                      </div> -->
                   </div>
               </div>
           </div>
@@ -45,10 +45,10 @@
                       <p class="card-category">Unique Source</p>
                       <h3 class="card-title">{{ uniqueSource.length }}</h3>
                   </div>
-                  <div class="card-footer">
-                      <div class="stats">
+                  <div class="card-footer" style="border: none;">
+                      <!-- <div class="stats">
                           <i class="material-icons">local_offer</i> Tracked from xyz.com
-                      </div>
+                      </div> -->
                   </div>
               </div>
           </div>
@@ -72,9 +72,11 @@
       <div class="row">
           <div class="col-md-4" *ngFor="let article of newsDataList">
               <div class="card card-chart " style=" height: 560px;">
-                  <div class="card-header  " [ngClass]="{'card-header-success': article.analysis.sentiment == 'Positive','card-header-danger': article.analysis.sentiment == 'Negative','card-header-secondary': article.analysis.sentiment == 'Neutral'}">
+                  <div class="card-header d-flex justify-content-center " [ngClass]="{'card-header-success': article.analysis.sentiment == 'Positive','card-header-danger': article.analysis.sentiment == 'Negative','card-header-secondary': article.analysis.sentiment == 'Neutral'}">
                       <!-- <div class="ct-chart" id="dailySalesChart"></div> -->
-                      <img class="mw-100" style="height: 200px;" [src]="article.image" alt="" srcset="">
+                      <img *ngIf="article.image" class="mw-100" style="height: 200px;" [src]="article.image" alt="" srcset="">
+                      <img *ngIf="!article.image" class="mw-100" style="height: 200px;" src="assets/img/sample.png" alt="" srcset="">
+
                   </div>
                   <div class="card-body">
                       <h4 class="card-title bold" style="font-weight: bold;">
