--- a/src/assets/scss/core/_cards.scss
+++ b/src/assets/scss/core/_cards.scss
@@ -494,7 +494,8 @@
       &:not(.card-header-icon):not(.card-header-text):not(.card-header-image){
         border-radius: $border-radius-base;
         margin-top: -20px;
-        padding: 15px;
+        // padding: 15px;
+        padding: 7px;
       }
 
       .card-icon,
